--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,12 @@ body{
 	padding-left: 0px;
 	font-color:#777777;
 	height:100%;
-	width:100%;
-	
+	width:100%;	
 }
 
 
 .top{
-	height:120px;
+	height:75px;
 	width:100%;
 	padding-bottom:0px;
 	margin-bottom: 0px;
@@ -33,7 +32,7 @@ header{
     width:180px;
     color:#ffffff;
     text-align: center;
-    font-size: 18px;
+    font-size: 24px;
     padding-top:30px;
     padding-bottom:20px;
 }
@@ -73,11 +72,13 @@ li{
 	padding-top:0px;
 	padding-bottom:0px;
 	overflow:auto;
-	height:500px;
+	border-top-style:solid;
+	border-top-color: gray;
+	border-top-width:2px;
+	height:550px;
 	width:1200px;
 	position:relative;
-	background-color:pink;
-	
+	background-image: url("https://images.blogthings.com/whatpatternisyourbrainquiz/pattern-6.jpg");
 }
 
 
@@ -87,8 +88,9 @@ li{
 	margin-right:0px;
 	margin-bottom:0px;
 	margin-left:50px;
-	height:300px;
-	width:30%;
+	height:460px;
+	width:50%;
+	overflow: auto;
 	background-color: #ffffff;
 	position: absolute;
 }
@@ -101,9 +103,75 @@ li{
 	padding-bottom:30px;
 }
 
+#bio-image{
+	float:left;
+	margin-left:30px;
+	margin-right:20px;
+	margin-bottom:8px;
+	height:170px;
+	width:150px;
+}
+
 p{
-	margin-left: 15px;
+	margin-left: 30px;
+	margin-right:30px;
+	color: #737373;
+	font-size: ;
+}
+
+#contact-info{
+	float:right;
+	margin-right:245px;
+	margin-top: 35px;
+	background-color:#ffffff;
+	height:220px;
+	width:23%;
+}
+
+#contact-me{
+	color:#4aaaa5;
+	font-size:20px;
+	padding-left:0px;
+	padding-top:30px;
+	padding-bottom:30px;
+	text-align: center;
+}
+
+#git-img{
+	float:left;
+	height:60px;
+	width:60px;
+	margin-left:20px;
+}
+
+#linked-img{
+	float:left;
+	height:60px;
+	width:60px;
+	margin-left:20px;
 	margin-right:15px;
+}
+
+#so-img{
+	float:left;
+	height:60px;
+	width:60px;
+	margin-left:15px;
+	margin-right:20px;
+}
+
+footer{
+	height:45px;
+	width:1200px;
+	background-color: #666666;
+	text-align: center;
+	color:#b3b3b3;
+	padding-top:33px;
+	border-top-style:solid;
+	border-top-color:#4aaaa5;
+	border-top-width:8px;
+	
+
 }
 
 
