--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -73,58 +73,109 @@ li{
 
 }
 
-.main{
+.portfolio-main{
 	margin-top:0px;
 	margin-bottom:0px;
 	padding-top:0px;
 	padding-bottom:0px;
-	overflow:auto;
+	overflow: auto;
 	border-top-style:solid;
 	border-top-color: gray;
 	border-top-width:2px;
-	height:550px;
+	height:1200px;
 	width:1200px;
 	position:relative;
 	background-image: url("https://images.blogthings.com/whatpatternisyourbrainquiz/pattern-6.jpg");
 }
 
-
-#main-bio{
+#portfolio-space{
  
 	margin-top:35px;
 	margin-right:0px;
 	margin-bottom:0px;
 	margin-left:50px;
-	height:460px;
+	height:1000px;
 	width:50%;
 	overflow: auto;
 	background-color: #ffffff;
 	position: absolute;
 }
 
-#about-me{
+#portfolio-head{
 	color:#4aaaa5;
 	font-size:25px;
 	padding-left:30px;
 	padding-top:30px;
-	padding-bottom:30px;
+	padding-bottom:20px;
+	margin-bottom:20px;
 }
 
-#bio-image{
+#top-left{
 	float:left;
-	margin-left:30px;
-	margin-right:20px;
-	margin-bottom:8px;
-	height:170px;
-	width:150px;
+	height:200px;
+	width:200px;
+	position: relative;
+	margin-left: 70px;
 }
 
-p{
-	margin-left: 30px;
-	margin-right:30px;
-	color: #737373;
-	font-size: ;
+#hangman{
+	margin-left: 70px;
+	margin-top:130px;
+	width:200px;
+	height:40px;
+	color:#ffffff;
+	background-color: #4aaaa5;
+	position:absolute;
+
 }
+
+#top-right{
+	float:left;
+	height:200px;
+	width:200px;
+	position: relative;
+	margin-left: 50px;
+
+}
+
+#rpg{
+	margin-left: 320px;
+	margin-top:130px;
+	width:200px;
+	height:40px;
+	color:#ffffff;
+	background-color: #4aaaa5;
+	position:absolute;
+
+}
+
+#middle-left{
+	float:left;
+	height:200px;
+	width:200px;
+	position: relative;
+	margin-left: 70px;
+	margin-top:40px;
+}
+
+#trivia{
+	margin-left: 70px;
+	margin-top:370px;
+	width:200px;
+	height:40px;
+	color:#ffffff;
+	background-color: #4aaaa5;
+	position:absolute;
+
+}
+
+
+
+
+
+
+
+
 
 #contact-info{
 	float:right;
@@ -190,78 +241,7 @@ p{
 	padding-bottom:20px;
 }
 
-form{
-	color:#a6a6a6;
-	font-size:18px;
-	padding-left:30px;
-}
 
-#name-box{
-	width:500px;
-	margin-top:8px;
-	margin-bottom:10px;
-	color:#cccccc;
-}
-
-#email-box{
-	width:500px;
-	margin-top:8px;
-	margin-bottom:10px;
-	color:#cccccc;
-}
-
-#message-box{
-	width:500px;
-	height:160px;
-	margin-top:8px;
-	margin-bottom:10px;
-	color:#cccccc;
-}
-
-#submit-button{
-	margin-top:5px;
-	background-color:#4aaaa5;
-	color:white;
-	height:35px;
-	width:80px;
-	font-size:19px;
-}
-
-.portfolio-main{
-	margin-top:0px;
-	margin-bottom:0px;
-	padding-top:0px;
-	padding-bottom:0px;
-	overflow: auto;
-	border-top-style:solid;
-	border-top-color: gray;
-	border-top-width:2px;
-	height:550px;
-	width:1200px;
-	position:relative;
-	background-image: url("https://images.blogthings.com/whatpatternisyourbrainquiz/pattern-6.jpg");
-}
-
-#portfolio-space{
- 
-	margin-top:35px;
-	margin-right:0px;
-	margin-bottom:0px;
-	margin-left:50px;
-	height:460px;
-	width:50%;
-	overflow: auto;
-	background-color: #ffffff;
-	position: absolute;
-}
-
-#portfolio-head{
-	color:#4aaaa5;
-	font-size:25px;
-	padding-left:30px;
-	padding-top:30px;
-	padding-bottom:20px;
-}
 
 
 
