--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -8,8 +8,8 @@ body{
 	padding-bottom: 0px;
 	padding-left: 0px;
 	font-color:#777777;
-	height:100%;
-	width:960px;	
+	height:1300px;
+	width:1200px;	
 }
 
 
@@ -82,8 +82,8 @@ li{
 	border-top-style:solid;
 	border-top-color: gray;
 	border-top-width:2px;
-	height:1200px;
-	width:1200px;
+	height:1000px;
+	width:1300px;
 	position:relative;
 	background-image: url("https://images.blogthings.com/whatpatternisyourbrainquiz/pattern-6.jpg");
 }
@@ -94,7 +94,7 @@ li{
 	margin-right:0px;
 	margin-bottom:0px;
 	margin-left:50px;
-	height:1000px;
+	height:900px;
 	width:50%;
 	overflow: auto;
 	background-color: #ffffff;
@@ -122,11 +122,13 @@ li{
 	margin-left: 70px;
 	margin-top:130px;
 	width:200px;
-	height:40px;
+	height:30px;
 	color:#ffffff;
 	background-color: #4aaaa5;
 	position:absolute;
-
+	text-align: center;
+	font-size:20px;
+	padding-top:10px;
 }
 
 #top-right{
@@ -142,10 +144,13 @@ li{
 	margin-left: 320px;
 	margin-top:130px;
 	width:200px;
-	height:40px;
+	height:30px;
 	color:#ffffff;
 	background-color: #4aaaa5;
 	position:absolute;
+	text-align: center;
+	font-size:20px;
+	padding-top:10px;
 
 }
 
@@ -162,26 +167,65 @@ li{
 	margin-left: 70px;
 	margin-top:370px;
 	width:200px;
-	height:40px;
+	height:30px;
 	color:#ffffff;
 	background-color: #4aaaa5;
 	position:absolute;
-
+	text-align: center;
+	font-size:20px;
+	padding-top:10px;
 }
 
+#middle-right{
+	float:left;
+	height:200px;
+	width:200px;
+	position: relative;
+	margin-left: 50px;
+	margin-top: 40px;
+}
 
+#rutger{
+	margin-left: 320px;
+	margin-top:370px;
+	width:200px;
+	height:30px;
+	color:#ffffff;
+	background-color: #4aaaa5;
+	position:absolute;
+	text-align: center;
+	font-size:20px;
+	padding-top:10px;
+}
 
+#lower-left{
+	float:left;
+	height:200px;
+	width:200px;
+	position: relative;
+	margin-left: 70px;
+	margin-top:40px;
+}
 
-
-
-
+#rock{
+	margin-left: 70px;
+	margin-top:610px;
+	width:200px;
+	height:30px;
+	color:#ffffff;
+	background-color: #4aaaa5;
+	position:absolute;
+	text-align: center;
+	font-size:20px;
+	padding-top:10px;
+}
 
 
 #contact-info{
 	float:right;
 	margin-right:245px;
 	margin-top: 35px;
-	background-color:#ffffff;
+	background-color:#eee;
 	height:220px;
 	width:23%;
 }
@@ -242,15 +286,10 @@ li{
 }
 
 
-
-
-
-
-
-
 footer{
+	clear:both;
 	height:45px;
-	width:1200px;
+	width:1300px;
 	background-color: #666666;
 	text-align: center;
 	color:#b3b3b3;
