--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ li{
 	margin-right:0px;
 	margin-bottom:0px;
 	margin-left:50px;
-	height:460px;
+	height:500px;
 	width:50%;
 	overflow: auto;
 	background-color: #ffffff;
@@ -120,10 +120,11 @@ li{
 }
 
 p{
-	margin-left: 30px;
-	margin-right:30px;
+	margin-left: 50px;
+	margin-right:50px;
+	margin-bottom:5px;
 	color: #737373;
-	font-size: ;
+	font-size:16px;
 }
 
 #contact-info{
@@ -193,7 +194,7 @@ p{
 form{
 	color:#a6a6a6;
 	font-size:18px;
-	padding-left:30px;
+	padding-left:50px;
 }
 
 #name-box{
