--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,12 @@ li{
 }
 
 p{
-	margin-left: 50px;
-	margin-right:50px;
-	margin-bottom:5px;
+	margin-left: 0px;
+	margin-right:0px;
+	margin-bottom:0px;
+	padding-left:30px;
+	padding-right:30px;
+	padding-bottom:20px;
 	color: #737373;
 	font-size:16px;
 }
@@ -194,7 +197,7 @@ p{
 form{
 	color:#a6a6a6;
 	font-size:18px;
-	padding-left:50px;
+	padding-left:30px;
 }
 
 #name-box{
@@ -202,6 +205,7 @@ form{
 	margin-top:8px;
 	margin-bottom:10px;
 	color:#cccccc;
+	padding-left:30px;
 }
 
 #email-box{
@@ -209,6 +213,7 @@ form{
 	margin-top:8px;
 	margin-bottom:10px;
 	color:#cccccc;
+	padding-left:30px;
 }
 
 #message-box{
@@ -217,6 +222,7 @@ form{
 	margin-top:8px;
 	margin-bottom:10px;
 	color:#cccccc;
+	padding-left:30px;
 }
 
 #submit-button{
@@ -224,48 +230,10 @@ form{
 	background-color:#4aaaa5;
 	color:white;
 	height:35px;
-	width:80px;
+	width:140px;
 	font-size:19px;
+	padding-left:0px;
 }
-
-.portfolio-main{
-	margin-top:0px;
-	margin-bottom:0px;
-	padding-top:0px;
-	padding-bottom:0px;
-	overflow: auto;
-	border-top-style:solid;
-	border-top-color: gray;
-	border-top-width:2px;
-	height:550px;
-	width:1200px;
-	position:relative;
-	background-image: url("https://images.blogthings.com/whatpatternisyourbrainquiz/pattern-6.jpg");
-}
-
-#portfolio-space{
- 
-	margin-top:35px;
-	margin-right:0px;
-	margin-bottom:0px;
-	margin-left:50px;
-	height:460px;
-	width:50%;
-	overflow: auto;
-	background-color: #ffffff;
-	position: absolute;
-}
-
-#portfolio-head{
-	color:#4aaaa5;
-	font-size:25px;
-	padding-left:30px;
-	padding-top:30px;
-	padding-bottom:20px;
-}
-
-
-
 
 
 
