--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ li{
 	height:500px;
 	width:51%;
 	overflow: auto;
-	background-color: #ffffff;
+	background-color: #FFFFFF;
 	position: absolute;
 }
 
