--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,9 +119,9 @@ li{
 	width:150px;
 }
 
-p{
-	margin-left:100px;
-	margin-right:100px;
+#main-copy{
+	margin-left:30px;
+	margin-right:30px;
 	margin-bottom:0px;
 	padding-left:0px;
 	padding-right:0px;
