--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ li{
 	float:right;
 	margin-right:245px;
 	margin-top: 35px;
-	background-color:#ffffff;
+	background-color:#FFFFFF;
 	height:220px;
 	width:23%;
 }
